# QuakeTracker

./: README.md  package.json  rustfmt.toml  vite.config.js
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: +layout.svelte  app.html  theme.ts  world.ts
src-tauri/: Cargo.toml  TAURI_COMMANDS.md  build.rs  tauri.conf.json
src-tauri/src/: analytics.rs  client.rs  commands.rs  error.rs  lib.rs  main.rs  seismic.rs  state.rs  test_utils.rs
src-tauri/src/analytics/: incremental.rs  processors.rs
src/charts/frequneces/: options.ts
src/charts/get_coordinate_clusters/: options.ts
src/charts/get_count_by_year/: options.ts
src/charts/get_hourly_frequency/: options.ts
src/charts/get_monthly_frequency/: options.ts
src/charts/get_weekly_frequency/: options.ts
src/charts/magnitude-depth-scatter/: options.ts
src/charts/magnitude-distribution/: options.ts
src/charts/magnitute-distribution/: options.ts
src/charts/pie-regions/: map.ts  options.ts
src/components/: AnalyticsTables.svelte  LeftSidebar.svelte  NewPoint.svelte  RightSidebar.svelte
src/routes/: +page.svelte  +page.ts  map-libre-init.ts
src/types/: Geometry.ts  PointData.ts
static/: theme.json
