[package]
name = "quaketracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quaketracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
tauri-plugin-log = "2"
geojson = "0.24.1"
geo-types = "0.7.14"
reqwest = "0.12.9"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.69"
tokio-tungstenite = { version = "0.25.0", features = ["native-tls"] }
futures-util = "0.3.31"
itertools = "0.14.0"
polars = { version = "0.45.1", features = ["json"] }
