[package]
name = "quaketracker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quaketracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
geojson = "0.24"
geo-types = "0.7"
reqwest = "0.12"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = "0.3"
itertools = "0.14"
polars = { version = "0.46", features = ["json", "lazy", "temporal", "dtype-datetime", "serde"] }
dashmap = "6.1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
